# tau-vehicle-classification

./: .env  .gitignore  .pre-commit-config.yaml  README.md  checkpoints.dvc  data.dvc  pyproject.toml
.dvc/: config
conf/: baseline.yaml  efficientvit.yaml  efficientvit_b2.yaml  example.yaml
conf/aug/: default.yaml
conf/data/: kaggle_private.yaml  kaggle_public.yaml
conf/hyp/: default.yaml  efficient_vit_b2.yaml
conf/infer/: baseline.yaml
conf/model/: efficient_vit_b0.yaml  efficient_vit_b2.yaml  resnet18.yaml
conf/trainer/: default.yaml
conf/trainer/callbacks/: default.yaml
configs/train/: example.yaml
examples/: best_predictions.yaml
scripts/data/: split.py
tau-vehicle/: __init__.py  __main__.py
tau-vehicle/src/data/: dataset.py  module.py
tau_vehicle/: __init__.py  __main__.py
tau_vehicle/src/: export.py  infer.py  train.py
tau_vehicle/src/data/: dataset.py  module.py  transforms.py
tau_vehicle/src/model/: huggingface.py
