[tool.poetry]
name = "tau-vehicle"
version = "0.1.0"
description = "A package to train and infer the solution on \"TAU Vehicle Type Recognition Competition\" competition on Kaggle."
authors = ["Kirill Kondrashov <kirpall@ya.ru>"]
readme = "README.md"
packages = [
    { include = "tau-vehicle" }
]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.59.2"
mlflow = "^2.22.0"
dvc-s3 = "^3.2.0"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
